typesense/tests/derive/ui/unknown_attribute.stderr
error: Unexpected token facets. Did you mean `facet`?
 --> $DIR/unknown_attribute.rs:8:17
  |
8 |     #[typesense(facets)]
  |                 ^^^^^^
